# aivle_execl_combine

./: DX_데이터 분석 표현.xlsx  excel_combine.py  format.py  openFolder.py  pyproject.toml  result.csv  test.py
excel/: AI_5차 미니프로젝트.xlsx  AI_6차 미니프로젝트.xlsx  AI_7차 미니프로젝트.xlsx  AI_Django를 활용한 Web App 개발.xlsx  AI_가상화 클라우드.xlsx  AI_딥러닝.xlsx  AI_모델해석평가.xlsx  DX_4차 미니프로젝트.xlsx  DX_5차 미니프로젝트.xlsx  DX_6차 미니프로젝트.xlsx  DX_IT인프라.xlsx  DX_데이터수집(API).xlsx  DX_데이터수집(웹크롤링).xlsx  DX_시각지능 딥러닝.xlsx  DX_언어지능 딥러닝.xlsx  DX_클라우드 서비스.xlsx
flask/: index.py
result/: rawDataSeason4.xlsx
