[tool.poetry]
name = "aivle-excel"
version = "0.1.0"
description = ""
authors = ["jihkang <106561135+jihkang@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "aivle_excel"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.1"
openpyxl = "^3.1.2"
flask = "^3.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
